# orb-rustzone

./: Cargo.toml  README.md  catalog-info.yaml  deny.toml  flake.nix  pyproject.toml
.cargo/: config.toml
.github/workflows/: call-ta.yaml  default.yaml  misc-ci.yaml  pr-compliance.yaml  release.yaml  relyance-sci.yml  rust-ci.yaml  security-scorecard-deploy.yml  ta.yaml
optee/: Cargo.toml
optee/.cargo/: config.toml
optee/secure-storage/: README.md
optee/secure-storage/proto/: Cargo.toml
optee/secure-storage/proto/src/: lib.rs
optee/secure-storage/ta/: Cargo.toml  build.rs
optee/secure-storage/ta/src/: main.rs  trace.rs
x/: Cargo.toml
x/src/: main.rs
