[workspace]
members = [
	"x",
	# "source-repo/optee/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-rustzone-ci"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace.dependencies.orb-x-optee]
branch = "main"
git = "https://github.com/worldcoin/orb-software"
