[package]
name = "orb-secure-storage-proto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
num_enum = { version = "0.7.5", default-features = false }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true, default-features = false }
